--- a/startup/assets/css/main.css
+++ b/startup/assets/css/main.css
@@ -176,7 +176,7 @@ input, select, textarea {
 		margin: 0 0 2rem 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1, h2, h4, h5, h6 {
 		color: #ffffff;
 		font-weight: 600;
 		line-height: 1.5;
@@ -199,9 +199,59 @@ input, select, textarea {
 			padding-bottom: 0.5rem;
 			margin: 0 0 2rem 0;
 		}
+		#logo{
+			display: inline-block;
+				padding: 15px 30px;
+				font-size: 18px;
+				text-align: center;
+				text-decoration: none;
+				cursor: pointer;
+				border: 2px solid #ead275;
+				color: #fff;
+				background-color: #e3ce7c;
+				border-radius: 50px;
+				overflow: hidden;
+				position: relative;
+				font-family: 'Papyrus', sans-serif;
+				width: 200px;
+		}
+		/* Button animation on hover */
+			#logo:before {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background: linear-gradient(45deg,  rgba(224, 5, 5, 0.075), #ffb66b);
+				transform: scaleX(0);
+				transform-origin: left;
+				transition: transform 0.5s ease-out;
+				z-index: -1;
+			}
+	
+			#logo:hover:before {
+				transform: scaleX(1);
+			}
+			/* Pulsating animation */
+			@keyframes pulsate {
+				0% {
+					transform: scale(1);
+				}
+				50% {
+					transform: scale(1.1);
+				}
+				100% {
+					transform: scale(1);
+				}
+			}
+	
+			#logo:hover {
+				animation: pulsate 1s infinite;
+			}
 
 	h1 {
-		font-size: 2.25rem;
+		font-size: 4.25rem;
 		line-height: 1.3;
 		letter-spacing: 0.5rem;
 	}
@@ -704,7 +754,7 @@ input, select, textarea {
 		}
 
 			.image.main img {
-				width: 100%;
+				width: 50%;
 			}
 
 		@media screen and (max-width: 736px) {
